# PolarGeosAI

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
PolarGeosAI/: MultiInputModel.py  __init__.py  func.py  func_ml.py  impl.py  run_function.py  test_function.py
