[project]
name = "PolarGeosAI/"
version = "0.0.1"
authors = [
  { name="Yongxing Loo ", email="looyongxing@gmail.com" },
]
description = "Easy extraction and processing of matching GOES geostationary satellite and polar orbiting scatterometer data for model training."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://yongxingloo.github.io/PolarGeosAIDocs/"
Issues = "https://github.com/yongxingloo/PolarGeosAI/issues"